# splynters

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: mac.yml  ubuntu.yml  windows.yml
benches/: benches.rs
benchmark_results/: results_census-income.csv  results_census-income_srt.csv  results_census1881.csv  results_dimension_003.csv  results_dimension_008.csv  results_dimension_033.csv  results_uscensus2000.csv  results_weather_sept_85.csv  results_weather_sept_85_srt.csv  results_wikileaks-noquotes.csv  results_wikileaks-noquotes_srt.csv
data/dimension_008/: dimension_008_bitmap_000002.txt  dimension_008_bitmap_000004.txt  dimension_008_bitmap_000006.txt  dimension_008_bitmap_000008.txt  dimension_008_bitmap_000009.txt  dimension_008_bitmap_000010.txt  dimension_008_bitmap_000016.txt  dimension_008_bitmap_000017.txt  dimension_008_bitmap_000021.txt  dimension_008_bitmap_000023.txt  dimension_008_bitmap_000024.txt  dimension_008_bitmap_000026.txt  dimension_008_bitmap_000030.txt  dimension_008_bitmap_000034.txt  dimension_008_bitmap_000040.txt  dimension_008_bitmap_000041.txt  dimension_008_bitmap_000043.txt  dimension_008_bitmap_000046.txt  dimension_008_bitmap_000050.txt  dimension_008_bitmap_000052.txt  dimension_008_bitmap_000053.txt  dimension_008_bitmap_000055.txt  dimension_008_bitmap_000056.txt  dimension_008_bitmap_000059.txt  dimension_008_bitmap_000061.txt  dimension_008_bitmap_000063.txt  dimension_008_bitmap_000064.txt  dimension_008_bitmap_000065.txt  (+2130 more)
python/: benchmarking.ipynb  run_all_benchmarks.py
src/: lib.rs
(+2128 files in other folders)
