[package]
name = "splynters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "splynters"
crate-type = ["cdylib", "rlib"]
# crate-type = ["cdylib"]

[dependencies]
bytes = "1.10.1"
pyo3 = "0.23.3"
splinter-rs = "0.5.4"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "benches" 
harness = false      
